syntax = "proto3";
option java_multiple_files = true;
package com.wuda.raft.grpc.codegen;

message RequestVoteParameter {
    int64 candidateTerm = 1;
    string candidateId = 2;
}
message RequestVoteResult {
    string bambooId = 1;
    int64 term = 2;
    bool voteGranted = 3;
}

message AppendEntryParameter {
    int64 term = 1;
    string leaderId = 2;
    bytes entries = 3;
}
message AppendEntryResult {
    int64 term = 1;
    bool success = 2;
}

service RpcService {
    rpc requestVote(RequestVoteParameter) returns (RequestVoteResult);

    rpc appendEntriesRpc(AppendEntryParameter) returns (AppendEntryResult);
}

